--- a/作业.html
+++ b/作业.html
@@ -117,7 +117,7 @@
 	  </li>
 	  <li><a href="#">实验8</a>
 		<ul>
-        <li><a href="main/index.html">个人主页</a></li>
+        <li><a href="pubiubiu.github.io">个人主页</a></li>
       </ul>
 	  </li>
   </ul>
