--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                               <div class="project-overlay">
                                    <div class="project-info">
                                         <h1>可以偶尔疯狂</h1>
-                                        <h3>crazy crazy crazy</h3>
+                                        <h3>crazy crazy crazy！</h3>
                                    </div>
                               </div>
                          </a>
@@ -158,7 +158,7 @@
                               <div class="project-overlay">
                                    <div class="project-info">
                                         <h1>累的时候记得放松心情</h1>
-                                        <h3>relax relax relax</h3>
+                                        <h3>relax relax relax！</h3>
                                    </div>
                               </div>
                          </a>
@@ -174,7 +174,7 @@
                               <div class="project-overlay">
                                    <div class="project-info">
                                         <h1>一定要开心</h1>
-                                        <h3>smile smile smile</h3>
+                                        <h3>smile smile smile！</h3>
                                    </div>
                               </div>
                          </a>
